# tanmatsu-coprocessor-firmware

./: LICENSE  Makefile  README.md
src/: CMakeLists.txt
src/application/: hardware.h  i2c_registers.h  leds.c  leds.h  main.c  pmic.c  pmic.h
src/hal/: rtc.c  rtc.h
src/platform/: CMakeLists.txt
